[gd_scene load_steps=2 format=3 uid="uid://ds2s10rycwfov"]

[ext_resource type="Script" path="res://addons/Menu.gd" id="1_8e6gh"]

[node name="GDEMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_8e6gh" )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -91.5
offset_right = 145.5
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
offset_right = 291.0
offset_bottom = 183.0

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer"]
offset_right = 291.0
offset_bottom = 46.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 50.0
offset_right = 291.0
offset_bottom = 81.0
alignment = 1

[node name="ProcessorsLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
offset_left = 57.0
offset_top = 2.0
offset_right = 146.0
offset_bottom = 28.0
text = "Processors:"

[node name="ProcessorCountBox" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer"]
offset_left = 150.0
offset_right = 233.0
offset_bottom = 31.0
min_value = 2.0
value = 2.0

[node name="StatusLabel" type="Label" parent="PanelContainer/VBoxContainer"]
offset_top = 85.0
offset_right = 291.0
offset_bottom = 132.0
size_flags_vertical = 3
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 136.0
offset_right = 291.0
offset_bottom = 183.0
size_flags_vertical = 3
alignment = 1

[node name="OkayBtn" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
offset_right = 143.0
offset_bottom = 47.0
size_flags_horizontal = 3
text = "Okay"

[node name="CancelBtn" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
offset_left = 147.0
offset_right = 291.0
offset_bottom = 47.0
size_flags_horizontal = 3
text = "Cancel
"
